Generate self-signed certificate

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -2,11 +2,21 @@ ktor {
   deployment {
     environment = development
     port = 8080
+    sslPort = 8443
     autoreload = true
     watch = [ server ]
   }
 
   application {
     modules = [ co.moelten.burndown.server.BurndownAppKt.module ]
+  }
+
+  security {
+    ssl {
+      keyStore = build/temporary.jks
+      keyAlias = mykey
+      keyStorePassword = changeit
+      privateKeyPassword = changeit
+    }
   }
 }
