Update login screen, meta tag for responsiveness, application.conf

--- a/server/src/main/resources/prod-template-application.conf
+++ b/server/src/main/resources/prod-template-application.conf
@@ -1,10 +1,19 @@
 ktor {
   deployment {
-    environment = production
-    rootPath = "."
+    port = 80
+    sslPort = 443
   }
 
   application {
     modules = [ co.moelten.burndown.server.BurndownAppKt.module ]
+  }
+
+  security {
+    ssl {
+      keyStore = temporary.jks
+      keyAlias = mykey
+      keyStorePassword = changeit
+      privateKeyPassword = changeit
+    }
   }
 }
